--- a/examples/moving_cell.html
+++ b/examples/moving_cell.html
@@ -10,12 +10,16 @@
         #info {
             position: absolute;
             top: 10px;
-            width: 100%;
-            text-align: center;
+            left: 10px;
+            max-width: 300px;
+            text-align: left;
             color: #fff;
             z-index: 100;
             pointer-events: none;
             text-shadow: 1px 1px 2px black;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 5px;
         }
         #loading {
             position: absolute;
@@ -28,10 +32,15 @@
             padding: 20px;
             border-radius: 10px;
         }
+        h2 { margin: 0 0 5px 0; font-size: 1.2em; }
+        p { margin: 0; font-size: 0.9em; }
     </style>
 </head>
 <body>
-    <div id="info">Voro-js Moving Cell<br>One cell moves through static points<br><span style="font-size: 0.8em">(Press 'p' to save screenshot)</span></div>
+    <div id="info">
+        <h2>Moving Cell</h2>
+        <p>One cell moves through static points</p>
+    </div>
     <div id="loading">Loading Voro++ Module...</div>
 
     <script type="importmap">
@@ -47,6 +56,7 @@
     <script type="module">
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+        import Stats from 'three/addons/libs/stats.module.js';
         import GUI from 'lil-gui';
 
         // --- Main Application ---
@@ -74,6 +84,9 @@
 
             const controls = new OrbitControls(camera, renderer.domElement);
             controls.enableDamping = true;
+
+            // Stats
+            const stats = new Stats();
 
             // Lighting
             const ambientLight = new THREE.AmbientLight(0x404040);
@@ -122,6 +135,11 @@
             gui.add(params, 'velocity', 0.01, 0.5).name('Velocity');
             gui.add(params, 'autoRun').name('Auto Run');
             gui.add(params, 'regenerate').name('Regenerate');
+
+            // Integrate Stats into GUI
+            stats.dom.style.cssText = 'position:relative;top:auto;left:auto;display:block;margin:10px auto;';
+            const statsFolder = gui.addFolder('Stats');
+            statsFolder.domElement.querySelector('.children').appendChild(stats.dom);
 
             function generatePoints() {
                 points = [];
@@ -259,6 +277,7 @@
             // Animation Loop
             function animate() {
                 requestAnimationFrame(animate);
+                stats.update();
                 
                 pivot.rotation.y += 0.002;
 
