--- a/examples/performance_demo.html
+++ b/examples/performance_demo.html
@@ -10,16 +10,20 @@
         #info {
             position: absolute;
             top: 10px;
-            width: 100%;
-            text-align: center;
+            left: 10px;
+            max-width: 300px;
+            text-align: left;
             pointer-events: none;
             text-shadow: 1px 1px 2px black;
             z-index: 10;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 5px;
         }
         #results {
             position: absolute;
-            top: 60px;
-            left: 20px;
+            top: 120px;
+            left: 10px;
             background: rgba(0, 0, 0, 0.8);
             padding: 15px;
             border-radius: 8px;
@@ -39,6 +43,8 @@
             padding: 20px;
             border-radius: 10px;
         }
+        h2 { margin: 0 0 5px 0; font-size: 1.2em; }
+        p { margin: 0; font-size: 0.9em; }
     </style>
     <script type="importmap">
         {
@@ -54,7 +60,6 @@
     <div id="info">
         <h2>Performance Demo</h2>
         <p>Benchmark Voronoi generation speed.</p>
-        <p style="font-size: 0.8em">(Press 'p' to save screenshot)</p>
     </div>
     <div id="results"></div>
     <div id="loading">Loading Voro++ Module...</div>
@@ -64,6 +69,7 @@
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
         import GUI from 'lil-gui';
+        import Stats from 'three/addons/libs/stats.module.js';
 
         import('../dist/voro_browser.js').then(voroModule => {
             return voroModule.default();
@@ -117,6 +123,12 @@
             gui.add(params, 'boxSize', 10, 100).name('Box Size');
             gui.add(params, 'render').name('Render Result');
             gui.add(params, 'run').name('Run Benchmark');
+
+            // Stats
+            const stats = new Stats();
+            stats.dom.style.cssText = 'position:relative;top:auto;left:auto;display:block;margin:10px auto;';
+            const statsFolder = gui.addFolder('Stats');
+            statsFolder.domElement.querySelector('.children').appendChild(stats.dom);
 
             function runBenchmark() {
                 const resultsDiv = document.getElementById('results');
@@ -244,6 +256,7 @@
             // Animation Loop
             function animate() {
                 requestAnimationFrame(animate);
+                stats.update();
                 controls.update();
                 renderer.render(scene, camera);
             }
