--- a/examples/voronoi_relaxation.html
+++ b/examples/voronoi_relaxation.html
@@ -10,12 +10,16 @@
         #info {
             position: absolute;
             top: 10px;
-            width: 100%;
-            text-align: center;
+            left: 10px;
+            max-width: 300px;
+            text-align: left;
             color: #fff;
             z-index: 100;
             pointer-events: none;
             text-shadow: 1px 1px 2px black;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 10px;
+            border-radius: 5px;
         }
         #loading {
             position: absolute;
@@ -28,10 +32,15 @@
             padding: 20px;
             border-radius: 10px;
         }
+        h2 { margin: 0 0 5px 0; font-size: 1.2em; }
+        p { margin: 0; font-size: 0.9em; }
     </style>
 </head>
 <body>
-    <div id="info">Voro-js Voronoi Relaxation (Lloyd's Algorithm)<br>Cells move towards their centroid<br><span style="font-size: 0.8em">(Press 'p' to save screenshot)</span></div>
+    <div id="info">
+        <h2>Voronoi Relaxation</h2>
+        <p>Lloyd's Algorithm: Cells move towards their centroid</p>
+    </div>
     <div id="loading">Loading Voro++ Module...</div>
 
     <script type="importmap">
@@ -48,6 +57,7 @@
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
         import GUI from 'lil-gui';
+        import Stats from 'three/addons/libs/stats.module.js';
 
         // --- Centroid Calculation ---
         function computeCellCentroid(cell) {
@@ -178,6 +188,12 @@
             gui.add(params, 'autoRun').name('Auto Run');
             gui.add(params, 'regenerate').name('Regenerate');
 
+            // Stats
+            const stats = new Stats();
+            stats.dom.style.cssText = 'position:relative;top:auto;left:auto;display:block;margin:10px auto;';
+            const statsFolder = gui.addFolder('Stats');
+            statsFolder.domElement.querySelector('.children').appendChild(stats.dom);
+
             function generatePoints() {
                 points = [];
                 for (let i = 0; i < params.pointCount; i++) {
@@ -304,6 +320,7 @@
             // Animation Loop
             function animate() {
                 requestAnimationFrame(animate);
+                stats.update();
                 
                 pivot.rotation.y += 0.005;
 
