add custom geometry example

--- a/examples/moving_cell.html
+++ b/examples/moving_cell.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voro-js Moving Cell Example</title>
+    <title>voro-js Example: Moving Cell</title>
     <style>
         body { margin: 0; font-family: sans-serif; overflow: hidden; }
         canvas { display: block; }
