--- a/examples/performance_demo.html
+++ b/examples/performance_demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voro-js Performance Demo</title>
+    <title>voro-js Example: Performance Demo</title>
     <style>
         body { margin: 0; font-family: sans-serif; overflow: hidden; background-color: #111; color: #fff; }
         #container { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
