make examples use typescript

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,7 +11,7 @@
         .card { background: white; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); overflow: hidden; transition: transform 0.2s; display: flex; flex-direction: column; position: relative; }
         .card:hover { transform: translateY(-5px); box-shadow: 0 5px 15px rgba(0,0,0,0.15); }
         .card-image-container { position: relative; display: block; color: white; text-decoration: none; }
-        .card-image { width: 100%; height: 200px; background-color: #ddd; object-fit: cover; display: block; }
+        .card-image { width: 100%; height: 100%; background-color: #ddd; object-fit: cover; display: block; }
         .card-title { position: absolute; bottom: 0; left: 0; right: 0; margin: 0; padding: 1rem; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent); font-size: 1.25rem; text-shadow: 0 1px 2px rgba(0,0,0,0.5); }
         .card-content { padding: 1rem 4rem 1.5rem 1.5rem; flex-grow: 1; display: flex; flex-direction: column; }
         .card-desc { font-size: 0.95rem; color: #666; margin: 0; flex-grow: 1; }
@@ -76,7 +76,7 @@
 
         <div class="card">
             <a href="custom_geometry.html" class="card-image-container">
-                <img src="./assets/voro_performance.png" alt="Custom Geometry" class="card-image">
+                <img src="./assets/custom_geometry.png" alt="Custom Geometry" class="card-image">
                 <h2 class="card-title">Custom Geometry</h2>
             </a>
             <a href="https://github.com/mdt-re/voro-js/blob/main/examples/custom_geometry.html" class="github-btn" title="View Code" target="_blank" aria-label="View Code on GitHub">
